fix navbar overlapping with body contents

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,10 @@
   //  border: 1px solid red;
  }
 
+body {
+    padding-bottom: 65px;
+}
+
 // Navbar styling Start
 $mobile-bottom-bar-primary-dark: darken($primary-color, 20%);
 
